--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="hero grid-container">
-      <nav class="nav flex justify-space-between align-center py-lg">
+      <nav class="nav py-lg">
         <img src="./images/logo.svg" class="nav__menu-logo" alt="logo" />
 
         <img
@@ -131,10 +131,26 @@
         </div>
         <div class="footer__socmed flex flex-row">
           <ul>
-            <li><a aria-label="facebook" href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
+            <li>
+              <a aria-label="facebook" href="#"
+                ><img src="./images/icon-facebook.svg" alt="facebook"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="./images/icon-twitter.svg" alt="twitter"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="./images/icon-pinterest.svg" alt="pinterest"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="./images/icon-instagram.svg" alt="instagram"
+              /></a>
+            </li>
           </ul>
           <div>
             <small>© 2021 Loopstudios. All rights reserved.</small>
