--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,10 @@
   <body>
     <div class="hero grid-container">
       <nav class="nav py-lg">
-        <img src="./images/logo.svg" class="nav__menu-logo" alt="logo" />
+        <img src="./images/svg/logo.svg" class="nav__menu-logo" alt="logo" />
 
         <img
-          src="./images/icon-hamburger.svg"
+          src="./images/svg/icon-hamburger.svg"
           class="nav__menu-icon"
           alt="menu icon"
         />
@@ -120,7 +120,7 @@
     <footer class="footer grid-container py-xl">
       <div class="grid-col-2">
         <div class="footer__nav flex flex-row align-center">
-          <img src="./images/logo.svg" alt="" />
+          <img src="./images/svg/logo.svg" alt="" />
           <ul class="flex flex-col py-md">
             <li><a href="">About</a></li>
             <li><a href="">Careers</a></li>
@@ -133,22 +133,22 @@
           <ul>
             <li>
               <a aria-label="facebook" href="#"
-                ><img src="./images/icon-facebook.svg" alt="facebook"
+                ><img src="./images/svg/icon-facebook.svg" alt="facebook"
               /></a>
             </li>
             <li>
               <a href="#"
-                ><img src="./images/icon-twitter.svg" alt="twitter"
+                ><img src="./images/svg/icon-twitter.svg" alt="twitter"
               /></a>
             </li>
             <li>
               <a href="#"
-                ><img src="./images/icon-pinterest.svg" alt="pinterest"
+                ><img src="./images/svg/icon-pinterest.svg" alt="pinterest"
               /></a>
             </li>
             <li>
               <a href="#"
-                ><img src="./images/icon-instagram.svg" alt="instagram"
+                ><img src="./images/svg/icon-instagram.svg" alt="instagram"
               /></a>
             </li>
           </ul>
